--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -310,9 +310,9 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 None=======
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/Josh/PharaohBossAnims/PharaohSkinFinal.PharaohSkinFinal
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3135,6 +3135,84 @@ DecalActor.Decal=True
 DecalActor.Rendering=True
 DecalActor.Tags=True
 DecalActor.Cooking=True
+EditorAnimSegment.Animation Segment=True
+EditorAnimSegment.Montage=True
+AnimGraphNode_LayeredBoneBlend.Config=True
+AnimGraphNode_LayeredBoneBlend.Runtime=True
+AnimGraphNode_LayeredBoneBlend.Performance=True
+BossAI_C.Tick=True
+BossAI_C.Default=True
+BossAI_C.Stats=True
+BossAI_C.Status=True
+BossAI_C.Bleed=True
+BossAI_C.Stun=True
+BossAI_C.Crystalise=True
+BossAI_C.Blind=True
+BossAI_C.Poison=True
+BossAI_C.LifeSteal=True
+BossAI_C.Drop=True
+BossAI_C.Character=True
+BossAI_C.Camera=True
+BossAI_C.Pawn=True
+BossAI_C.Rendering=True
+BossAI_C.Replication=True
+BossAI_C.Input=True
+BossAI_C.Actor=True
+BossAI_C.Variable=True
+BossAI_C.TransformCommon=True
+BossAI_C.Sockets=True
+BossAI_C.Animation=True
+BossAI_C.Mesh=True
+BossAI_C.Materials=True
+BossAI_C.Clothing=True
+BossAI_C.ClothingSimulation=True
+BossAI_C.Physics=True
+BossAI_C.Collision=True
+BossAI_C.Lighting=True
+BossAI_C.Tags=True
+BossAI_C.ComponentReplication=True
+BossAI_C.Activation=True
+BossAI_C.Cooking=True
+BossAI_C.Events=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+REINST_BossAI_C_185.Tick=True
+REINST_BossAI_C_185.None=True
+REINST_BossAI_C_185.Default=True
+REINST_BossAI_C_185.Stats=True
+REINST_BossAI_C_185.Status=True
+REINST_BossAI_C_185.Bleed=True
+REINST_BossAI_C_185.Stun=True
+REINST_BossAI_C_185.Crystalise=True
+REINST_BossAI_C_185.Blind=True
+REINST_BossAI_C_185.Poison=True
+REINST_BossAI_C_185.LifeSteal=True
+REINST_BossAI_C_185.Drop=True
+REINST_BossAI_C_185.Character=True
+REINST_BossAI_C_185.Camera=True
+REINST_BossAI_C_185.Pawn=True
+REINST_BossAI_C_185.Rendering=True
+REINST_BossAI_C_185.Replication=True
+REINST_BossAI_C_185.Input=True
+REINST_BossAI_C_185.Actor=True
+BossAI_C.Shape=True
+BossAI_C.Navigation=True
+ParticleSystemComponent.Variable=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Sockets=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Materials=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.ComponentReplication=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
+ParticleSystemComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3316,6 +3394,16 @@ None=======
 /Game/Movies/MenuVideo1.MenuVideo1=1
 /Game/Movies/NewMediaPlayer_Video.NewMediaPlayer_Video=1
 /Game/Movies/NewMediaPlayer.NewMediaPlayer=1
+/Game/Josh/AnimationsTest/AttackMontages/360_Montage.360_Montage=0
+/Game/Josh/AnimationsTest/Slash_Montage.Slash_Montage=0
+/Game/Josh/FinalWeapons/Javenlin.Javenlin=0
+/Game/Josh/FinalWeapons/RepairedShield.RepairedShield=0
+/Game/Josh/FinalWeapons/Khopesh_Unwrapped_Chris.Khopesh_Unwrapped_Chris=0
+/Game/Josh/HoundFolder/Hound-Rig__1_.Hound-Rig__1_=1
+/Game/Josh/HoundFolder/HoundSkinFinal.HoundSkinFinal=0
+/Game/Josh/FinalWeapons/Staff__2_.Staff__2_=0
+/Game/Josh/Gold_Beard.Gold_Beard=0
+/Game/AIAgent/BossAI.BossAI=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -3325,8 +3413,8 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
-PrimitiveComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
-SceneComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
+PrimitiveComponent=
+SceneComponent=
 ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -3336,9 +3424,9 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
 Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Character="\"Object.Mesh\" \"Object.Mesh\" "
+Character=
 Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn="\"Object.Mesh\" \"Object.Mesh\" "
+Pawn=
 None=======
 None=======
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3375,7 +3463,7 @@ InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[16]\" "
 BaseWeapon_C="\"Object.WeaponStats\" \"Object.WeaponStats\" "
 TestPawn3_C=
 StaticMeshComponent=
-MeshComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
+MeshComponent=
 TopDownCharacterTest_C=
 ShaneToyeSprintTest_C=
 BoxComponent=
@@ -3404,7 +3492,7 @@ HybridController_C="\"Object.Default.DebugColour\" "
 BehaviorTreeGraphNode_Root=
 BehaviorTreeGraphNode=
 AIGraphNode=
-EdGraphNode=
+EdGraphNode="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 RangeFinder_C=
 RangedController_C="\"Object.Default.DebugColour\" "
 ProgressBar="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -3447,7 +3535,7 @@ ThirdPerson_AnimBP_C=
 AnimInstance=
 HumanAnimBP_C=
 DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" "
-SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" "
+SkeletalMesh=
 DestructibleComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
 SkinnedMeshComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
 Spawn Item="\"Struct.BarrelLocation\" "
@@ -3456,6 +3544,10 @@ LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettin
 WorldSettings="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Broadphase.BroadphaseSettings.MBPBounds\" "
 Emitter="\"Object.Emitter.ParticleSystemComponent.Object.Lighting.LightingChannels\" "
 VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_Base="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+K2Node="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3473,6 +3565,7 @@ AutomatedLevelSequenceCapture.Cinematic=True
 AutomatedLevelSequenceCapture.Sequence=True
 FileMediaSource.File=True
 GameMapsSettings.DefaultMaps=True
+BossAI_C.Animation=True
 
 [RootWindow]
 ScreenPosition=X=67.000 Y=52.000
@@ -4249,7 +4342,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -4354,26 +4447,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem1=/Game/AIAgent/BaseAI
-MRUItem2=/Game/Widgets/Ability_Wheel
-MRUItem3=/Game/Levels/Area1-Rework
-MRUItem4=/Game/Movies/MenuVideo1
-MRUItem5=/Game/Movies/NewMediaPlayer_Video
-MRUItem6=/Game/Movies/NewMediaPlayer
-MRUItem7=/Game/Movies/MainMenuVideo1
-MRUItem8=/Game/Movies/mp4texturedzoo__2_
-MRUItem9=/Game/Movies/Area1_MediaPlayer
-MRUItem10=/Game/Movies/Area1_MediaPlayer_Video
-MRUItem11=/Game/AssetZoo_Flyover1
-MRUItem12=/Game/Levels/MainMenu
-MRUItem13=/Game/Movies/Area1_FlyOver1
-MRUItem14=/Game/Levels/texturedzoo
-MRUItem15=/Game/Models/finishedassets/tree/LP_Palm_tree
-MRUItem16=/Game/Levels/Demo
-MRUItem17=/Game/Chloe/UI/Settings_Menu
-MRUItem18=/Game/Cart_-_Unwrapped_-_Chris_-22-05-19
-MRUItem19=/Game/Models/Ben/vase_light_damage_Ben_Wilkinson_09-01-19
+MRUItem0=/Game/Josh/Gold_Beard
+MRUItem1=/Game/Josh/Skinned_Player_Skeleton
+MRUItem2=/Game/Josh/HoundFolder/HoundSkinFinal
+MRUItem3=/Game/Josh/PharaohBossAnims/PharaohSkinFinal
+MRUItem4=/Game/AIAgent/BossAI
+MRUItem5=/Game/Josh/FinalWeapons/Staff__2_
+MRUItem6=/Game/Josh/AnimationsTest/Heavy_Slam
+MRUItem7=/Game/Josh/HoundFolder/Hound-Rig__1_
+MRUItem8=/Game/Josh/FinalWeapons/RepairedShield
+MRUItem9=/Game/Josh/FinalWeapons/Javenlin
+MRUItem10=/Game/Josh/FinalWeapons/Khopesh_Unwrapped_Chris
+MRUItem11=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Slam_Montage
+MRUItem12=/Game/Josh/AnimationsTest/AttackMontages/360_Montage
+MRUItem13=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
+MRUItem14=/Game/Josh/HumanAnimBP
+MRUItem15=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem16=/Game/AIAgent/BaseAI
+MRUItem17=/Game/Widgets/Ability_Wheel
+MRUItem18=/Game/Levels/Area1-Rework
+MRUItem19=/Game/Movies/MenuVideo1
 
 [WidgetTemplatesExpanded]
 Extra=False
