--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -284,7 +284,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/b024899h/Particle_Effects/Whirlwind
+ContentBrowserTab1.SelectedPaths=/Game/Josh
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -310,7 +310,7 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 None=======
 OpenAssetsAtExit=/Game/Josh/PharaohBossAnims/PharaohSkinFinal.PharaohSkinFinal
 
