video background for main menu

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@C115-14
 LastExecutedLaunchName=C115-14
 LastExecutedPIEPreviewDevice=
-NewWindowPosition=(X=315,Y=143)
+NewWindowPosition=(X=2235,Y=45)
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -103,17 +103,18 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/Levels/MainMenu
 MRUItem1=/Game/Levels/Area1-Rework
-MRUItem2=/Game/Levels/MainMenu
+MRUItem2=/Game/Levels/Area2-MarketMeshStart
 MRUItem3=/Game/Levels/texturedzoo
-MRUItem4=/Game/Levels/Demo
-MRUItem5=/Game/b024899h/ParticleEffectsTest
-MRUItem6=/Game/Levels/Area2-Market
-MRUItem7=/Game/Levels/MechanicsLevel
-MRUItem8=/Game/Chloe/UI/Main_Menu_level/Main_Menu
-MRUItem9=/Game/Levels/TerrainMap
-MRUItem10=/Game/Levels/BlockOut
+MRUItem4=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem5=/Game/Levels/Demo
+MRUItem6=/Game/b024899h/ParticleEffectsTest
+MRUItem7=/Game/Levels/Area2-Market
+MRUItem8=/Game/Levels/MechanicsLevel
+MRUItem9=/Game/Chloe/UI/Main_Menu_level/Main_Menu
+MRUItem10=/Game/Levels/TerrainMap
+MRUItem11=/Game/Levels/BlockOut
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Pause,MoviePlayerSettings.Movies.StartupMovies,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
@@ -284,7 +285,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/b024899h/Particle_Effects/ShieldEffect
+ContentBrowserTab1.SelectedPaths=/Game/Movies
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -305,13 +306,16 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
+GlobalAssetPicker.ThumbnailSizeScale=0.100000
+GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
+OpenAssetsAtExit=/Game/Chloe/UI/Start_Menu.Start_Menu
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3155,6 +3159,59 @@ ParticleModuleRequired.Materials=True
 ParticleModuleSpawn.Spawn=True
 ParticleModuleSpawn.Burst=True
 ParticleModuleSpawn.Cascade=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Materials=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
+InstancedFoliageActor.TransformCommon=True
+InstancedFoliageActor.Input=True
+InstancedFoliageActor.Actor=True
+BossAI_C.TransformCommon=True
+BossAI_C.Animation=True
+BossAI_C.Mesh=True
+BossAI_C.Default=True
+BossAI_C.Stats=True
+BossAI_C.Physics=True
+BossAI_C.Collision=True
+BossAI_C.Lighting=True
+BossAI_C.Clothing=True
+BossAI_C.ClothingSimulation=True
+BossAI_C.Rendering=True
+BossAI_C.Tags=True
+BossAI_C.Activation=True
+BossAI_C.Cooking=True
+BossAI_C.Character Movement: Jumping / Falling=True
+BossAI_C.Character Movement (General Settings)=True
+BossAI_C.Character Movement: Walking=True
+BossAI_C.Character Movement: Swimming=True
+BossAI_C.Character Movement: Flying=True
+BossAI_C.Character Movement: Custom Movement=True
+BossAI_C.Character Movement (Rotation Settings)=True
+BossAI_C.Character Movement: Physics Interaction=True
+BossAI_C.Character Movement (Networking)=True
+BossAI_C.Character Movement=True
+BossAI_C.Character Movement: Avoidance=True
+BossAI_C.Character Movement: NavMesh Movement=True
+BossAI_C.RootMotion=True
+BossAI_C.NavMovement=True
+BossAI_C.Velocity=True
+BossAI_C.PlanarMovement=True
+BossAI_C.MovementComponent=True
+BossAI_C.Shape=True
+BossAI_C.Navigation=True
+BossAI_C.Character=True
+BossAI_C.Camera=True
+BossAI_C.Pawn=True
+BossAI_C.Input=True
+BossAI_C.Actor=True
+Actor.Rendering=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3333,22 +3390,26 @@ None=======
 /Game/Movies/Area1_MediaPlayer.Area1_MediaPlayer=0
 /Game/Movies/Area1_MediaPlayer_Video.Area1_MediaPlayer_Video=0
 /Game/Movies/MainMenuVideo1.MainMenuVideo1=0
-/Game/Movies/MenuVideo1.MenuVideo1=1
+/Game/Movies/MenuVideo1.MenuVideo1=0
 /Game/Movies/NewMediaPlayer_Video.NewMediaPlayer_Video=1
 /Game/Movies/NewMediaPlayer.NewMediaPlayer=1
 /Game/b024899h/Particle_Effects/Hurricane/Swing_P.Swing_P=0
+/Game/Movies/UE4_Logo_test.UE4_Logo_test=1
+/Game/Movies/MenuMediaPlayer_Video.MenuMediaPlayer_Video=0
+/Game/Movies/MainMenuFinal.MainMenuFinal=1
 
 [PluginBrowser]
-InstalledPlugins=Substance
+InstalledPlugins=DialoguePlugin
+InstalledPlugins=ParticleText
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
-PrimitiveComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
-SceneComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
-ActorComponent="\"Object.MaxWalkSpeed\" \"Object.MaxWalkSpeed\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -3409,17 +3470,17 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Ability_Wheel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget=
 HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HybridController_C="\"Object.Default.DebugColour\" "
 BehaviorTreeGraphNode_Root=
@@ -3433,7 +3494,7 @@ Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 Start_Menu_C=
 CoolDownComponent_C="\"Object.\" \"Object.\" "
 RangedAI_C=
-BaseAI_C=
+BaseAI_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
@@ -3442,7 +3503,7 @@ Calc Offence Stats="\"Struct.TempDamage\" "
 Calc Defence Stats="\"Struct.TempArmour\" "
 TopDownGameMode_C=
 GameModeBase=
-Info="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Broadphase.BroadphaseSettings.MBPBounds\" "
+Info=
 TopDownCharacterCleaned_C="\"Object.CrystalPowerGeneration\" \"Object.CrystalPowerGeneration\" "
 Inventory_C=
 Baseprojectile_C=
@@ -3486,6 +3547,7 @@ ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifet
 ParticleModule="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
+BossAI_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3525,13 +3587,13 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
+UNR=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/Levels
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
-GenericImport=../../../../../../Users/s017290g/Downloads/body_WIP.FBX
+GenericImport=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/Movies/MainMenuFinalVid.mp4
 GenericExport=C:/Users/Tony/Desktop/Level 6/Collab/SK_Mannequin_TD.FBX
 GenericOpen=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/Movies
 GenericSave=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -4199,8 +4261,8 @@ Voice.TimeStamp=2018.12.14-12.01.51
 Voice.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2018.12.14-12.01.29
 HierarchicalLODUtilities.LastCompileMethod=External
-SequencerWidgets.TimeStamp=2018.09.20-07.56.18
-SequencerWidgets.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2018.09.21-08.05.22
+SequencerWidgets.LastCompileMethod=External
 StaticMeshEditor.TimeStamp=2018.09.20-07.56.19
 StaticMeshEditor.LastCompileMethod=Unknown
 AnimationEditor.TimeStamp=2018.09.20-07.56.05
@@ -4236,6 +4298,7 @@ OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 UseErrorColoring=False
+QualityLevel=1
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -4283,7 +4346,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LightingResults
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -4314,8 +4377,13 @@ LastLogListing=PIE
 /Game/Models/Armour/LeatherCowlHelmet=(R=0.000000,G=0.500000,B=0.079121,A=1.000000)
 
 [PlacementMode]
-RecentlyPlaced=/Game/b024899h/Particle_Effects/ShieldEffect/Shield_PE.Shield_PE;
+RecentlyPlaced=/Game/Models/Dylan/ExposedCrystal_2_Dylan_10-01-19.ExposedCrystal_2_Dylan_10-01-19;
+RecentlyPlaced=/Game/Models/Dylan/ExposedCrystal_1_Dylan_10-01-19.ExposedCrystal_1_Dylan_10-01-19;
+RecentlyPlaced=/Game/Foliage/Crystals/ExposedCrystalstrange.ExposedCrystalstrange;
+RecentlyPlaced=/Game/H011646h/Crystals/Crystals/Blue-strangeCrystal.Blue-strangeCrystal;
+RecentlyPlaced=/Game/Models/Ben/2_handle_vase_Ben_Wilkinson_09-01-19.2_handle_vase_Ben_Wilkinson_09-01-19;
 RecentlyPlaced=/Game/b024899h/Particle_Effects/WindSand/WindPE.WindPE;
+RecentlyPlaced=/Game/b024899h/Particle_Effects/ShieldEffect/Shield_PE.Shield_PE;
 RecentlyPlaced=/Game/b024899h/Particle_Effects/WindSand/Wind1Mat.Wind1Mat;
 RecentlyPlaced=/Game/b024899h/Particle_Effects/PushBack/PushbackNew1.PushbackNew1;
 RecentlyPlaced=/Game/b024899h/Particle_Effects/PushBack/Pushback.Pushback;
@@ -4329,11 +4397,6 @@ RecentlyPlaced=/Game/AssetZoo_Flyover1.AssetZoo_Flyover1;
 RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
 RecentlyPlaced=/Game/cloth_head_wrap.cloth_head_wrap;
 RecentlyPlaced=/Game/Models/finishedassets/table/Table.Table;
-RecentlyPlaced=/Game/Models/Chris/Cart_-_Chris_-_09-01-19.Cart_-_Chris_-_09-01-19;
-RecentlyPlaced=/Game/Models/finishedassets/PickAxe_Scaled.PickAxe_Scaled;
-RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
-RecentlyPlaced=/Game/Will/Destrucible_Barrel.Destrucible_Barrel;
-RecentlyPlaced=/Game/Models/finishedassets/barrel/LP_barrel_DM.LP_barrel_DM;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4388,26 +4451,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/b024899h/Particle_Effects/Hurricane/Swing_P
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem2=/Game/AIAgent/BaseAI
-MRUItem3=/Game/Widgets/Ability_Wheel
+MRUItem0=/Game/Movies/MainMenuFinal
+MRUItem1=/Game/Chloe/UI/Start_Menu
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/Movies/MenuMediaPlayer_Video
 MRUItem4=/Game/Levels/Area1-Rework
-MRUItem5=/Game/Movies/MenuVideo1
-MRUItem6=/Game/Movies/NewMediaPlayer_Video
-MRUItem7=/Game/Movies/NewMediaPlayer
-MRUItem8=/Game/Movies/MainMenuVideo1
-MRUItem9=/Game/Movies/mp4texturedzoo__2_
-MRUItem10=/Game/Movies/Area1_MediaPlayer
-MRUItem11=/Game/Movies/Area1_MediaPlayer_Video
-MRUItem12=/Game/AssetZoo_Flyover1
-MRUItem13=/Game/Levels/MainMenu
-MRUItem14=/Game/Movies/Area1_FlyOver1
-MRUItem15=/Game/Levels/texturedzoo
-MRUItem16=/Game/Models/finishedassets/tree/LP_Palm_tree
-MRUItem17=/Game/Levels/Demo
-MRUItem18=/Game/Chloe/UI/Settings_Menu
-MRUItem19=/Game/Cart_-_Unwrapped_-_Chris_-22-05-19
+MRUItem5=/Game/Levels/Area2-MarketMeshStart
+MRUItem6=/Game/Levels/texturedzoo
+MRUItem7=/Game/Movies/MenuVideo1
+MRUItem8=/Game/Movies/MenuMediaPlayer
+MRUItem9=/Game/Movies/UE4_Logo_test
+MRUItem10=/Game/b024899h/Particle_Effects/Hurricane/Swing_P
+MRUItem11=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem12=/Game/AIAgent/BaseAI
+MRUItem13=/Game/Widgets/Ability_Wheel
+MRUItem14=/Game/Movies/NewMediaPlayer_Video
+MRUItem15=/Game/Movies/NewMediaPlayer
+MRUItem16=/Game/Movies/MainMenuVideo1
+MRUItem17=/Game/Movies/mp4texturedzoo__2_
+MRUItem18=/Game/Movies/Area1_MediaPlayer
+MRUItem19=/Game/Movies/Area1_MediaPlayer_Video
 
 [WidgetTemplatesExpanded]
 Extra=False
